make parallelization optional

--- a/nf_pipelines/nextflow.config
+++ b/nf_pipelines/nextflow.config
@@ -4,13 +4,14 @@ workDir = "/public/compomics3/Sam/nextflow_denovo"
 
 
 // GENERAL VARIABLES
-params.mgf_files = "/public/compomics3/Sam/PXD023217/mgf/*.mgf"
+params.mgf_files = "/public/compomics3/Sam/PXD023217/mgf_filtered/*.mgf"
 params.denovo_results_dir = "/public/compomics3/Sam/PXD023217/denovo_results"
 params.serializer = "/public/compomics3/Sam/config_files/denovo/serializer/serialize_dummy.txt"
+params.serialize = false
 
 
 // ACTIVATION VARIABLES
-params.run_contranovo = false
+params.run_contranovo = true
 params.run_novob = true
 params.run_pepnet = true
 params.run_casanovo = true
