developing refinement script and debugging parsers

--- a/nf_pipelines/nextflow.config
+++ b/nf_pipelines/nextflow.config
@@ -31,6 +31,8 @@ params.model_path_casanovo = "/public/compomics3/Sam/denovo_checkpoints/casanovo
 params.config_instanovo = "/public/compomics3/Sam/config_files/denovo/instanovo/config.yaml"
 params.model_path_instanovo = "/public/compomics3/Sam/denovo_checkpoints/instanovo/instanovo.pt"
 
+// INSTANOVO PLUS VARIABLES
+params.model_path_instanovo_diffusion = "/public/compomics3/Sam/denovo_checkpoints/instanovo/diffusion_checkpoint"
 
 // GRAPHNOVO VARIABLES
 params.model_path_pathsearcher = "/public/compomics3/Sam/denovo_checkpoints/GraphNovo/ckpt/GraphNovo_PathSearcher.pt"
@@ -52,3 +54,4 @@ params.model_path_pepnet = "/public/compomics3/Sam/denovo_checkpoints/PepNet/mod
 
 
 // SPECTRALIS VARIABLES
+params.config_spectralis = "/public/compomics3/Sam/config_files/denovo/spectralis/spectralis_config.yaml"
