bug fixing for peptide length and spectrum skipping

--- a/nf_pipelines/refinement/nextflow.config
+++ b/nf_pipelines/refinement/nextflow.config
@@ -11,7 +11,7 @@ params.denovo_engine = "pepnet"
 
 
 // ACTIVATION VARIABLES
-params.run_instanovoplus = false
+params.run_instanovoplus = true
 params.run_spectralis = true
 
 
