--- a/nf_pipelines/nextflow.config
+++ b/nf_pipelines/nextflow.config
@@ -4,18 +4,18 @@ workDir = "/public/compomics3/Sam/nextflow_denovo"
 
 
 // GENERAL VARIABLES
-params.mgf_files = "/public/compomics3/Sam/PXD023217/mgf_filtered/*.mgf"
-params.denovo_results_dir = "/public/compomics3/Sam/PXD023217/denovo_results"
+params.mgf_files = "/public/compomics3/Sam/PXD023217/mgf_selection/*.mgf"
+params.denovo_results_dir = "/public/compomics3/Sam/PXD023217/temp_results/contranovo"
 params.serializer = "/public/compomics3/Sam/config_files/denovo/serializer/serialize_dummy.txt"
 params.serialize = false
 
 
 // ACTIVATION VARIABLES
 params.run_contranovo = true
-params.run_novob = true
-params.run_pepnet = true
-params.run_casanovo = true
-params.run_instanovo = true
+params.run_novob = false
+params.run_pepnet = false
+params.run_casanovo = false
+params.run_instanovo = false
 params.run_graphnovo = false
 
 
