--- a/nf_pipelines/tools/nextflow.config
+++ b/nf_pipelines/tools/nextflow.config
@@ -8,18 +8,18 @@ workDir = "/public/compomics3/Sam/nextflow_denovo"
 params.conda_env_dir = "$HOME/miniconda3/envs"
 
 // FILES
-params.mgf_files = "/public/compomics3/Sam/PXD023217/mgf_selection/*.mgf"
-params.denovo_results_dir = "/public/compomics3/Sam/PXD023217/temp_results/contranovo"
+params.mgf_files = "/home/samva/Doctorate/data_directory/denovo_project/mgf_filtered/*.mgf"
+params.denovo_results_dir = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results"
 params.serializer = "/home/samva/Doctorate/DeNovo_Benchmark/configs/serializer/serialize_dummy.txt"
 params.serialize = false
 
 
 // ACTIVATION VARIABLES
 params.run_contranovo = true
-params.run_novob = false
-params.run_pepnet = false
-params.run_casanovo = false
-params.run_instanovo = false
+params.run_novob = true
+params.run_pepnet = true
+params.run_casanovo = true
+params.run_instanovo = true
 params.run_graphnovo = false
 
 
