--- a/nf_pipelines/test/nextflow.config
+++ b/nf_pipelines/test/nextflow.config
@@ -1,18 +1,17 @@
 conda.enabled = true
 
-workDir = "/public/compomics3/Sam/nextflow_denovo_test"
+workDir = "/home/samva/Doctorate/nextflow_workdirs/nextflow_denovo_tools"
 
-params.test_dir = "/public/compomics3/Sam/PXD023217/denovo_results/pepnet/*"
 
 // GENERAL VARIABLES
-params.mgf_files = "/public/compomics3/Sam/test_data/*.mgf"
-params.denovo_results_dir = "/public/compomics3/Sam/test_nf/test_nf2"
-params.serializer = "/public/compomics3/Sam/config_files/denovo/serializer/serialize_dummy.txt"
-params.serialize = false
+// ENVIRONMENT
+params.conda_env_dir = "$HOME/miniconda3/envs"
 
-params.result_folder_path = "/public/compomics3/Sam/PXD023217/denovo_results/casanovo/*.mztab"
-params.mgf_folder_path = "/public/compomics3/Sam/PXD023217/mgf_filtered/*.mgf"
-params.result_extension = "mztab"
+// FILES
+params.mgf_files = "/home/samva/Doctorate/data_directory/denovo_project/test_folder/test_mgf.mgf"
+params.denovo_results_dir = "/home/samva/Doctorate/data_directory/denovo_project/test_folder/results"
+params.serializer = "/home/samva/Doctorate/DeNovo_Benchmark/configs/serializer/serialize_dummy.txt"
+params.serialize = false
 
 
 // ACTIVATION VARIABLES
@@ -28,32 +27,35 @@ params.run_spectralis = false
 
 
 // CASANOVO VARIABLES
-params.config_casanovo = "/public/compomics3/Sam/config_files/denovo/casanovo/casanovo.yaml"
-params.model_path_casanovo = "/public/compomics3/Sam/denovo_checkpoints/casanovo/casanovo_massivekb.ckpt"
+params.config_casanovo = "/home/samva/Doctorate/DeNovo_Benchmark/configs/casanovo/casanovo.yaml"
+params.model_path_casanovo = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/casanovo/casanovo_massivekb.ckpt"
 
 
 // INSTANOVO VARIABLES
-params.config_instanovo = "/public/compomics3/Sam/config_files/denovo/instanovo/config.yaml"
-params.model_path_instanovo = "/public/compomics3/Sam/denovo_checkpoints/instanovo/instanovo.pt"
+params.config_instanovo = "/home/samva/Doctorate/DeNovo_Benchmark/configs/instanovo/config.yaml"
+params.model_path_instanovo = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/instanovo/instanovo.pt"
 
+// INSTANOVO PLUS VARIABLES
+params.model_path_instanovo_diffusion = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/instanovo/diffusion_checkpoint"
 
 // GRAPHNOVO VARIABLES
-params.model_path_pathsearcher = "/public/compomics3/Sam/denovo_checkpoints/GraphNovo/ckpt/GraphNovo_PathSearcher.pt"
-params.model_path_seqfiller = "/public/compomics3/Sam/denovo_checkpoints/GraphNovo/ckpt/GraphNovo_SeqFiller.pt"
+params.model_path_pathsearcher = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/GraphNovo/ckpt/GraphNovo_PathSearcher.pt"
+params.model_path_seqfiller = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/GraphNovo/ckpt/GraphNovo_SeqFiller.pt"
 
 
 // CONTRANOVO VARIABLES
-params.config_contranovo = "/public/compomics3/Sam/config_files/denovo/contranovo/config.yaml"
-params.model_path_contranovo = "/public/compomics3/Sam/denovo_checkpoints/ContraNovo/ControNovo.ckpt"
+params.config_contranovo = "/home/samva/Doctorate/DeNovo_Benchmark/configs/contranovo/config.yaml"
+params.model_path_contranovo = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/ContraNovo/ControNovo.ckpt"
 
 
 // NOVOB VARIABLES
-params.model_path_novob = "/public/compomics3/Sam/denovo_checkpoints/NovoB/usingGraphNovoDataset/GNovo/"
+params.model_path_novob = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/NovoB/usingGraphNovoDataset/GNovo/"
 // params.model_path_novob_weights = ""
 
 
 // PEPNET VARIABLES
-params.model_path_pepnet = "/public/compomics3/Sam/denovo_checkpoints/PepNet/model.h5"
+params.model_path_pepnet = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/PepNet/model.h5"
 
 
 // SPECTRALIS VARIABLES
+params.config_spectralis = "/home/samva/Doctorate/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
