--- a/nf_pipelines/refinement/nextflow.config
+++ b/nf_pipelines/refinement/nextflow.config
@@ -1,14 +1,27 @@
 conda.enabled = true
 
-workDir = "/public/compomics3/Sam/nextflow_denovo_refinement"
+
+workDir = "/home/samva/Doctorate/nextflow_workdirs/nextflow_denovo_refinement"
 
 // GENERAL VARIABLES
-params.mgf_files = "/public/compomics3/Sam/PXD023217/mgf_filtered/*.mgf"
-params.result_files = "/public/compomics3/Sam/PXD023217/denovo_results/casanovo/*.mztab"
-params.denovo_results_dir = "/public/compomics3/Sam/PXD023217/denovo_results/refinement/casanovo"
+// ENVIRONMENT
+params.conda_env_dir = "$HOME/miniconda3/envs"
+
+// FOLDERS AND VARIABLES
+params.mgf_files = "/home/samva/Doctorate/data_directory/denovo_project/mgf_filtered/*.mgf"
+params.result_files = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results/casanovo/*.mztab"
+params.denovo_results_dir = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results/refinement"
+
+params.result_root_dir = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results"
 
 params.denovo_engine = "casanovo"
-
+params.denovo_engines = [
+    "casanovo",
+    "instanovo",
+    "novob",
+    "pepnet",
+    "contranovo"
+]
 
 // ACTIVATION VARIABLES
 params.run_instanovoplus = true
@@ -16,10 +29,10 @@ params.run_spectralis = true
 
 
 // INSTANOVO PLUS VARIABLES
-params.model_path_instanovo_diffusion = "/public/compomics3/Sam/denovo_checkpoints/instanovo/diffusion_checkpoint"
+params.model_path_instanovo_diffusion = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/instanovo/diffusion_checkpoint"
 params.instanovo_plus_run_script = "/home/samva/Doctorate/DeNovo_Benchmark/package/instanovo_scripts/run_instanovoplus.py"
 
 
 // SPECTRALIS VARIABLES
-params.config_spectralis = "/public/compomics3/Sam/config_files/denovo/spectralis/spectralis_config.yaml"
+params.config_spectralis = "/home/samva/Doctorate/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
 params.spectralis_mode = "rescoring"
