--- a/nf_pipelines/test/nextflow.config
+++ b/nf_pipelines/test/nextflow.config
@@ -23,7 +23,8 @@ params.run_instanovo = true
 params.run_graphnovo = false
 
 
-params.run_spectralis = false
+params.run_instanovoplus = true
+params.run_spectralis = true
 
 
 // CASANOVO VARIABLES
@@ -37,6 +38,7 @@ params.model_path_instanovo = "/home/samva/Doctorate/data_directory/denovo_proje
 
 // INSTANOVO PLUS VARIABLES
 params.model_path_instanovo_diffusion = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/instanovo/diffusion_checkpoint"
+params.instanovo_plus_run_script = "/home/samva/Doctorate/DeNovo_Benchmark/package/instanovo_scripts/run_instanovoplus.py"
 
 // GRAPHNOVO VARIABLES
 params.model_path_pathsearcher = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/GraphNovo/ckpt/GraphNovo_PathSearcher.pt"
@@ -59,3 +61,9 @@ params.model_path_pepnet = "/home/samva/Doctorate/data_directory/denovo_project/
 
 // SPECTRALIS VARIABLES
 params.config_spectralis = "/home/samva/Doctorate/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
+params.spectralis_mode = "rescoring"
+
+
+// REFINEMENT VARIABLES
+params.result_files = "/home/samva/Doctorate/data_directory/denovo_project/test_folder/results/casanovo/test_mgf.mztab"
+params.denovo_engine = "casanovo"
