--- a/configs/spectralis/spectralis_config.yaml
+++ b/configs/spectralis/spectralis_config.yaml
@@ -6,7 +6,7 @@ scorer_path: /home/samva/Doctorate/data_directory/denovo_project/checkpoints/spe
 
 
 ### BIN RECLASSIFICATION
-BATCH_SIZE: 256
+BATCH_SIZE: 16
 
 BIN_RESOLUTION: 1
 MAX_MZ_BIN: 2000
@@ -50,9 +50,9 @@ MAX_SCORE: -1
 cache_scores: True
 
 ### all
-num_cores: -1
+num_cores: 8
 write_pop_to_file: False
 prosit_ce: 0.32
 
-verbose: False
+verbose: True
 interpret_c_as_fix: True
