--- a/nf_pipelines/test/nextflow.config
+++ b/nf_pipelines/test/nextflow.config
@@ -7,6 +7,7 @@ data_directory = "/public/compomics3/Sam/test_data"
 checkpoint_directory = "/public/compomics3/Sam/denovo_checkpoints"
 
 params.instanovo_plus_run_script = "/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark/package/instanovo_scripts/run_instanovoplus.py"
+params.result_root_dir = "/public/compomics3/Sam/test_data/results"
 
 // GENERAL VARIABLES
 // ACTIVATION VARIABLES
