allow gpu selection

--- a/nf_pipelines/refinement/nextflow.config
+++ b/nf_pipelines/refinement/nextflow.config
@@ -6,6 +6,7 @@ workDir = "/home/samva/Doctorate/nextflow_workdirs/nextflow_denovo_refinement"
 // GENERAL VARIABLES
 // ENVIRONMENT
 params.conda_env_dir = "$HOME/miniconda3/envs"
+params.gpu_device = "cuda:1"
 
 // FOLDERS AND VARIABLES
 params.mgf_files = "/home/samva/Doctorate/data_directory/denovo_project/mgf_filtered/*.mgf"
