refactoring nf-pipelines and editing GMM modeling

--- a/nf_pipelines/refinement/nextflow.config
+++ b/nf_pipelines/refinement/nextflow.config
@@ -1,30 +1,28 @@
 conda.enabled = true
 
-
 workDir = "/home/samva/Doctorate/nextflow_workdirs/nextflow_denovo_refinement"
 
 // GENERAL VARIABLES
 // ENVIRONMENT
 params.conda_env_dir = "$HOME/miniconda3/envs"
-params.gpu_device = "cuda:1"
+params.gpu_device = "cuda:0"
 
 // FOLDERS AND VARIABLES
-params.mgf_files = "/home/samva/Doctorate/data_directory/denovo_project/mgf_filtered/*.mgf"
-params.result_files = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results/casanovo/*.mztab"
-params.denovo_results_dir = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results/refinement"
+params.mgf_files = "/home/samva/Doctorate/data_directory/denovo_project/mgf_filtered/S*.mgf"
+params.result_files = "/home/samva/Doctorate/data_directory/denovo_project/search_results/sage/S*.sage.tsv"
+params.denovo_results_dir = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results/refinement/spectralis/pt4"
 
+// INSTANOVOPLUS
+params.denovo_engine = "sage"
+
+// SPECTRALIS
 params.result_root_dir = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results"
-
-params.denovo_engine = "casanovo"
 params.denovo_engines = [
-    "casanovo",
-    "instanovo",
-    "pepnet",
-    "contranovo"
+    "sage"
 ]
 
 // ACTIVATION VARIABLES
-params.run_instanovoplus = true
+params.run_instanovoplus = false
 params.run_spectralis = true
 
 
