--- a/nf_pipelines/tools/nextflow.config
+++ b/nf_pipelines/tools/nextflow.config
@@ -1,61 +1,34 @@
-conda.enabled = true
+workDir = "$HOME/Doctorate/nextflow_workdirs/nextflow_denovo_tools"
 
-workDir = "/public/compomics3/Sam/nextflow_denovo"
+// TEST //
+params.mgf_files = "$HOME/Doctorate/data_directory/tests/mgf_reformatted/*.mgf"
+
+// USAGE //
+// params.mgf_files = "$HOME/Doctorate/data_directory/tests/mgf/*.mgf"
 
 
-// GENERAL VARIABLES
-// ENVIRONMENT
-params.conda_env_dir = "$HOME/miniconda3/envs"
-
-// FILES
-params.mgf_files = "/home/samva/Doctorate/data_directory/denovo_project/mgf_filtered/*.mgf"
-params.denovo_results_dir = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results"
-params.serializer = "/home/samva/Doctorate/DeNovo_Benchmark/configs/serializer/serialize_dummy.txt"
+params.serializer = "$HOME/Doctorate/DeNovo_Benchmark/configs/serializer/serialize_dummy.txt"
 params.serialize = false
 
-
-// ACTIVATION VARIABLES
-params.run_contranovo = true
-params.run_novob = true
-params.run_pepnet = true
 params.run_casanovo = true
 params.run_instanovo = true
-params.run_graphnovo = false
+params.run_contranovo = true
+params.run_pepnet = true
+params.run_novob = true
 
 
-params.run_spectralis = false
+// params.tools = [
+//     'casanovo'    : true,
+//     'instanovo'   : true,
+//     'contranovo'  : true,
+//     'pepnet'      : true,
+//     'novob'       : true
+// ]
 
+// params.tool_configs = [
+//     casanovo: 'config_casanovo',
+//     instanovo: 'config_instanovo',
+//     contranovo: 'config_contranovo'
+// ]
 
-// CASANOVO VARIABLES
-params.config_casanovo = "/home/samva/Doctorate/DeNovo_Benchmark/configs/casanovo/casanovo.yaml"
-params.model_path_casanovo = "/home/samva/Doctorate/data_directory/checkpoints/casanovo/casanovo_massivekb.ckpt"
-
-
-// INSTANOVO VARIABLES
-params.config_instanovo = "/home/samva/Doctorate/DeNovo_Benchmark/configs/instanovo/config.yaml"
-params.model_path_instanovo = "/home/samva/Doctorate/data_directory/checkpoints/instanovo/instanovo.pt"
-
-// INSTANOVO PLUS VARIABLES
-params.model_path_instanovo_diffusion = "/home/samva/Doctorate/data_directory/checkpoints/instanovo/diffusion_checkpoint"
-
-// GRAPHNOVO VARIABLES
-params.model_path_pathsearcher = "/home/samva/Doctorate/data_directory/checkpoints/GraphNovo/ckpt/GraphNovo_PathSearcher.pt"
-params.model_path_seqfiller = "/home/samva/Doctorate/data_directory/checkpoints/GraphNovo/ckpt/GraphNovo_SeqFiller.pt"
-
-
-// CONTRANOVO VARIABLES
-params.config_contranovo = "/home/samva/Doctorate/DeNovo_Benchmark/configs/contranovo/config.yaml"
-params.model_path_contranovo = "/home/samva/Doctorate/data_directory/checkpoints/ContraNovo/ControNovo.ckpt"
-
-
-// NOVOB VARIABLES
-params.model_path_novob = "/home/samva/Doctorate/data_directory/checkpoints/NovoB/usingGraphNovoDataset/GNovo/"
-// params.model_path_novob_weights = ""
-
-
-// PEPNET VARIABLES
-params.model_path_pepnet = "/home/samva/Doctorate/data_directory/checkpoints/PepNet/model.h5"
-
-
-// SPECTRALIS VARIABLES
-params.config_spectralis = "/home/samva/Doctorate/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
+includeConfig 'modules/nextflow.config'
