add support for deepnovo and smsnet

--- a/nf_pipelines/tools/modules/nextflow.config
+++ b/nf_pipelines/tools/modules/nextflow.config
@@ -1,4 +1,5 @@
 conda.enabled = true
+
 params.conda_env_dir = "$HOME/miniconda3/envs"
 
 ///////////////////
@@ -38,6 +39,7 @@ params.config_casanovo = "$root_configs/casanovo/casanovo.yaml"
 params.model_path_instanovo_diffusion = "$root_checkpoints/instanovo/diffusion_checkpoint"
 
 params.model_path_instanovo = "$root_checkpoints/instanovo/instanovo.pt"
+params.knapsack_instanovo = "$root_checkpoints/knapsack"
 params.config_instanovo = "$root_configs/instanovo/config.yaml"
 
 // CONTRANOVO
@@ -52,3 +54,19 @@ params.model_path_pepnet = "$root_checkpoints/PepNet/model.h5"
 
 // SPECTRALIS
 params.config_spectralis = "$root_configs/spectralis/spectralis_config.yaml"
+
+// SMSNet
+params.model_path_smsnet = "$root_checkpoints/smsnet/smsnet_p"
+params.config_smsnet = "$root_configs/smsnet/smsnet_config.yaml"
+
+// PointNovo
+
+
+// DeepNovo
+params.knapsack_deepnovo = "$root_checkpoints/deepnovo/knapsack/knapsack.npy"
+params.model_dir = "$root_checkpoints/deepnovo/train.example"
+
+// PowerNovo
+
+
+// pi-HelixNovo
