--- a/nf_pipelines/tools/nextflow.config
+++ b/nf_pipelines/tools/nextflow.config
@@ -1,3 +1,5 @@
+conda.enabled = true
+
 workDir = "$HOME/Doctorate/nextflow_workdirs/nextflow_denovo_tools"
 
 // TEST //
@@ -10,11 +12,16 @@ params.mgf_files = "$HOME/Doctorate/data_directory/tests/mgf_reformatted/*.mgf"
 params.serializer = "$HOME/Doctorate/DeNovo_Benchmark/configs/serializer/serialize_dummy.txt"
 params.serialize = false
 
-params.run_casanovo = true
-params.run_instanovo = true
-params.run_contranovo = true
-params.run_pepnet = true
-params.run_novob = true
+params.run_casanovo = false
+params.run_instanovo = false
+params.run_contranovo = false
+params.run_pepnet = false
+params.run_novob = false
+params.run_smsnet = false
+params.run_pointnovo = false
+params.run_deepnovo = true
+params.run_powernovo = false
+params.run_pihelixnovo = false
 
 
 // params.tools = [
