--- a/nf_pipelines/refinement/nextflow.config
+++ b/nf_pipelines/refinement/nextflow.config
@@ -1,6 +1,7 @@
 conda.enabled = true
 
-workDir = "/home/samva/Doctorate/nextflow_workdirs/nextflow_denovo_refinement"
+workDir = "$HOME/Doctorate/nextflow_workdirs/nextflow_denovo_refinement"
+root = "$HOME/Doctorate"
 
 // GENERAL VARIABLES
 // ENVIRONMENT
@@ -8,29 +9,49 @@ params.conda_env_dir = "$HOME/miniconda3/envs"
 params.gpu_device = "cuda:0"
 
 // FOLDERS AND VARIABLES
-params.mgf_files = "/home/samva/Doctorate/data_directory/denovo_project/mgf_filtered/S*.mgf"
-params.result_files = "/home/samva/Doctorate/data_directory/denovo_project/search_results/sage/S*.sage.tsv"
-params.denovo_results_dir = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results/refinement/spectralis/pt4"
+params.mgf_files = "$root/data_directory/tests/mgf_reformatted/*.mgf"
+// params.result_files = "$root/data_directory/tests/denovo_output/casanovo/*.casanovo.mztab"
+params.denovo_results_dir = "$root/data_directory/tests/postprocessing"
 
 // INSTANOVOPLUS
 params.denovo_engine = "sage"
 
 // SPECTRALIS
-params.result_root_dir = "/home/samva/Doctorate/data_directory/denovo_project/denovo_results"
+params.result_root_dir = "$root/data_directory/tests/denovo_output"
 params.denovo_engines = [
-    "sage"
+    "casanovo",
+    "instanovo",
+    "contranovo",
+    "pepnet",
+    "novob"
 ]
 
 // ACTIVATION VARIABLES
-params.run_instanovoplus = false
+params.run_instanovoplus = true
 params.run_spectralis = true
 
 
 // INSTANOVO PLUS VARIABLES
-params.model_path_instanovo_diffusion = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/instanovo/diffusion_checkpoint"
-params.instanovo_plus_run_script = "/home/samva/Doctorate/DeNovo_Benchmark/package/instanovo_scripts/run_instanovoplus.py"
+params.model_path_instanovo_diffusion = "$root/data_directory/denovo_project/checkpoints/instanovo/diffusion_checkpoint"
+params.instanovo_plus_run_script = "$root/DeNovo_Benchmark/package/instanovo_scripts/run_instanovoplus.py"
 
 
 // SPECTRALIS VARIABLES
-params.config_spectralis = "/home/samva/Doctorate/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
-params.spectralis_mode = "rescoring"
+params.config_spectralis = "$root/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
+params.spectralis_mode = "ea"
+
+
+// RESCORING VARIABLES
+params.casanovo_rescore_script = "/home/samva/Doctorate/DeNovo_Benchmark/scripts/infer_casanovo_scores.py"
+params.path_model_casanovo = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/casanovo/casanovo_nontryptic.ckpt"
+params.path_config_casanovo = "/home/samva/Doctorate/data_directory/PWillems/configs/casanovo.yaml"
+params.modification_mapping = "/home/samva/Doctorate/DeNovo_Benchmark/nf_pipelines/refinement/modification_mapping.json"
+params.psmlist_filetype = "parquet"
+params.rescoring_out = "/home/samva/Doctorate/data_directory/PWillems/psmlists/rescored"
+params.peak_files = "/home/samva/Doctorate/data_directory/PWillems/mzml/*.mzML"
+params.psm_lists = "/home/samva/Doctorate/data_directory/PWillems/psmlists/raw/*.parquet"
+params.raw_extension = "mzML"
+
+executor {
+    queueSize = 3
+}
