--- a/nf_pipelines/utils/nextflow.config
+++ b/nf_pipelines/utils/nextflow.config
@@ -16,3 +16,6 @@ params.log_out = "$HOME/Doctorate/log_files/TTOF6600"
 // FILTER PARAMETERS
 params.max_charge = 8
 params.min_peak_length = 15
+
+// EXTENSIONS
+params.raw_extension = '.mzML'
