--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,14 +1,28 @@
 {
     "mgf_folder": "/home/samva/Doctorate/data_directory/PXD028735/mgf/Orbitrap_QE/reformatted",
     "ground_truth_folder": "/home/samva/Doctorate/data_directory/PXD028735/search_results/identification",
-    "denovo_folder": "/home/samva/Doctorate/data_directory/PXD028735/postprocessing",
+    "denovo_folder": "/home/samva/Doctorate/data_directory/PXD028735/denovo_results",
+    "postprocessing_folder": "/home/samva/Doctorate/data_directory/PXD028735/postprocessing",
     "path_ms2rescore_config": "/home/samva/Doctorate/DeNovo_Benchmark/configs/ms2rescore/config_default.json",
     "ground_truth_engine": "sage",
+    "regenerate": [],
+    "retrain_mokapot": false,
     "output_folder": "/home/samva/Doctorate/data_directory/PXD028735/rescoring_results",
     "file_type": "dir",
     "filename": null,
     "engines": [
+        "casanovo",
+        "contranovo",
+        "novob",
+        "pepnet",
+        "instanovo",
         "spectralis",
         "instanovoplus"
+    ],
+    "filenames": [
+        "LFQ_Orbitrap_DDA_Ecoli_01",
+        "LFQ_Orbitrap_DDA_QC_01",
+        "LFQ_Orbitrap_DDA_Human_01",
+        "LFQ_Orbitrap_DDA_Yeast_01"
     ]
 }
