add pi-primenovo support

--- a/nf_pipelines/tools/modules/nextflow.config
+++ b/nf_pipelines/tools/modules/nextflow.config
@@ -32,7 +32,7 @@ params.outdir_spectralis = "$root_results/spectralis" // output rescored results
 /////////////////////
 
 // CASANOVO
-params.model_path_casanovo = "$root_checkpoints/casanovo/casanovo_massivekb.ckpt"
+params.model_path_casanovo = "$root_checkpoints/casanovo/casanovo_nontryptic.ckpt"
 params.config_casanovo = "$root_configs/casanovo/casanovo.yaml"
 
 // INSTANOVO
@@ -70,3 +70,7 @@ params.model_dir = "$root_checkpoints/deepnovo/train.example"
 
 
 // pi-HelixNovo
+
+// pi-PrimeNovo
+params.model_path_piprimenovo = "$root_checkpoints/piPrimeNovo/model_massive.ckpt"
+params.config_piprimenovo = "$root_configs/piPrimeNovo/config.yaml"
