--- a/nf_pipelines/tools/nextflow.config
+++ b/nf_pipelines/tools/nextflow.config
@@ -2,11 +2,11 @@ conda.enabled = true
 
 workDir = "$HOME/Doctorate/nextflow_workdirs/nextflow_denovo_tools"
 
-// TEST //
-params.mgf_files = "$HOME/Doctorate/data_directory/tests/mgf_reformatted/*.mgf"
-
 // USAGE //
-// params.mgf_files = "$HOME/Doctorate/data_directory/tests/mgf/*.mgf"
+// params.mgf_files = "$HOME/Doctorate/data_directory/PWillems/mzml/*.mzML"
+
+// TEST //
+params.mgf_files = "$HOME/Doctorate/data_directory/tests/mgf/*.mgf"
 
 
 params.serializer = "$HOME/Doctorate/DeNovo_Benchmark/configs/serializer/serialize_dummy.txt"
@@ -19,9 +19,10 @@ params.run_pepnet = false
 params.run_novob = false
 params.run_smsnet = false
 params.run_pointnovo = false
-params.run_deepnovo = true
+params.run_deepnovo = false
 params.run_powernovo = false
 params.run_pihelixnovo = false
+params.run_piprimenovo = true
 
 
 // params.tools = [
