--- a/nf_pipelines/tools/modules/nextflow.config
+++ b/nf_pipelines/tools/modules/nextflow.config
@@ -15,9 +15,13 @@ params.conda_env_dir = "$HOME/miniconda3/envs"
 
 // Path to model checkpoints and configurations
 // See 'Tool parameters' for specific paths
-root_checkpoints = "$HOME/Doctorate/data_directory/denovo_project/checkpoints"
-root_configs = "$HOME/Doctorate/DeNovo_Benchmark/configs"
-root_results = "$HOME/Doctorate/data_directory/tests"
+root_checkpoints = "/public/compomics3/Sam/denovo_checkpoints" // Model checkpoint folder
+root_configs = "/public/compomics3/Sam/config_files/denovo" // Model run configuration folder
+
+// root_results = "/public/compomics3/Sam/PXD028735/QExactive" // Folder where results will be stored (1 above denovo_output)
+
+// TEST //
+root_results = "/public/compomics3/Sam/test_denovo"
 
 params.maxforks_tool = 1 // How many files to parallelize for each tool
 
@@ -70,6 +74,8 @@ params.model_dir = "$root_checkpoints/deepnovo/train.example"
 
 
 // pi-HelixNovo
+params.model_path_pihelixnovo = "$root_checkpoints/piHelixNovo/MSV000081142-epoch-5-step-800000.ckpt"
+params.config_pihelixnovo = "$root_configs/piHelixNovo/config.yaml"
 
 // pi-PrimeNovo
 params.model_path_piprimenovo = "$root_checkpoints/piPrimeNovo/model_massive.ckpt"
