--- a/nf_pipelines/tools/modules/nextflow.config
+++ b/nf_pipelines/tools/modules/nextflow.config
@@ -15,13 +15,17 @@ params.conda_env_dir = "$HOME/miniconda3/envs"
 
 // Path to model checkpoints and configurations
 // See 'Tool parameters' for specific paths
-root_checkpoints = "/public/compomics3/Sam/denovo_checkpoints" // Model checkpoint folder
-root_configs = "/public/compomics3/Sam/config_files/denovo" // Model run configuration folder
+root_checkpoints = "$HOME/Doctorate/data_directory/denovo_project/checkpoints"
+root_configs = "$HOME/Doctorate/DeNovo_Benchmark/configs"
+root_results = "$HOME/Doctorate/data_directory/tests"
 
-// root_results = "/public/compomics3/Sam/PXD028735/QExactive" // Folder where results will be stored (1 above denovo_output)
+// root_checkpoints = "/public/compomics3/Sam/denovo_checkpoints" // Model checkpoint folder
+// root_configs = "/public/compomics3/Sam/config_files/denovo" // Model run configuration folder
 
-// TEST //
-root_results = "/public/compomics3/Sam/test_denovo"
+// // root_results = "/public/compomics3/Sam/PXD028735/QExactive" // Folder where results will be stored (1 above denovo_output)
+
+// // TEST //
+// root_results = "/public/compomics3/Sam/test_denovo"
 
 params.maxforks_tool = 1 // How many files to parallelize for each tool
 
@@ -80,3 +84,7 @@ params.config_pihelixnovo = "$root_configs/piHelixNovo/config.yaml"
 // pi-PrimeNovo
 params.model_path_piprimenovo = "$root_checkpoints/piPrimeNovo/model_massive.ckpt"
 params.config_piprimenovo = "$root_configs/piPrimeNovo/config.yaml"
+
+// AdaNovo
+params.model_path_adanovo = "$root_checkpoints/adanovo/ckpt_1.ckpt"
+params.config_adanovo = "$root_configs/adanovo/config.yaml"
