--- a/nf_pipelines/tools/nextflow.config
+++ b/nf_pipelines/tools/nextflow.config
@@ -22,7 +22,8 @@ params.run_pointnovo = false
 params.run_deepnovo = false
 params.run_powernovo = false
 params.run_pihelixnovo = false
-params.run_piprimenovo = true
+params.run_piprimenovo = false
+params.run_adanovo = true
 
 
 // params.tools = [
