--- a/nf_pipelines/tools/modules/nextflow.config
+++ b/nf_pipelines/tools/modules/nextflow.config
@@ -75,7 +75,7 @@ params.knapsack_deepnovo = "$root_checkpoints/deepnovo/knapsack/knapsack.npy"
 params.model_dir = "$root_checkpoints/deepnovo/train.example"
 
 // PowerNovo
-
+params.model_path_powernovo = "$root_checkpoints/powernovo"
 
 // pi-HelixNovo
 params.model_path_pihelixnovo = "$root_checkpoints/piHelixNovo/MSV000081142-epoch-5-step-800000.ckpt"
