--- a/nf_pipelines/tools/nextflow.config
+++ b/nf_pipelines/tools/nextflow.config
@@ -6,7 +6,7 @@ workDir = "$HOME/Doctorate/nextflow_workdirs/nextflow_denovo_tools"
 // params.mgf_files = "$HOME/Doctorate/data_directory/PWillems/mzml/*.mzML"
 
 // TEST //
-params.mgf_files = "$HOME/Doctorate/data_directory/tests/mgf/*.mgf"
+params.mgf_files = "$HOME/Doctorate/data_directory/tests/mgf_reformatted/*.mgf"
 
 
 params.serializer = "$HOME/Doctorate/DeNovo_Benchmark/configs/serializer/serialize_dummy.txt"
@@ -20,9 +20,9 @@ params.run_novob = false
 params.run_smsnet = false
 params.run_pointnovo = false
 params.run_deepnovo = false
-params.run_powernovo = false
-params.run_pihelixnovo = false
-params.run_piprimenovo = false
+params.run_powernovo = true
+params.run_pihelixnovo = true
+params.run_piprimenovo = true
 params.run_adanovo = true
 
 
