--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,23 +1,18 @@
 {
-    "mgf_folder": "/home/samva/Doctorate/data_directory/PXD028735/mgf/Orbitrap_QE/reformatted",
-    "ground_truth_folder": "/home/samva/Doctorate/data_directory/PXD028735/search_results/identification",
-    "denovo_folder": "/home/samva/Doctorate/data_directory/PXD028735/denovo_results",
-    "postprocessing_folder": "/home/samva/Doctorate/data_directory/PXD028735/postprocessing",
-    "path_ms2rescore_config": "/home/samva/Doctorate/DeNovo_Benchmark/configs/ms2rescore/config_default.json",
+    "mgf_folder": "/public/compomics3/Sam/PXD028735/QExactive/mgf_reformatted",
+    "ground_truth_folder": "/public/compomics3/Sam/PXD028735/QExactive/search_results/identification",
+    "denovo_folder": "/public/compomics3/Sam/PXD028735/QExactive/denovo_output/casanovo/beams_100",
+    "postprocessing_folder": "/public/compomics3/Sam/PXD028735/QExactive/postprocessing",
+    "path_ms2rescore_config": "/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark/configs/ms2rescore/config_default.json",
     "ground_truth_engine": "sage",
     "regenerate": [],
     "retrain_mokapot": false,
-    "output_folder": "/home/samva/Doctorate/data_directory/PXD028735/rescoring_results",
+    "output_folder": "/public/compomics3/Sam/PXD028735/QExactive/rescoring_beams",
     "file_type": "dir",
     "filename": null,
+    "post_processors": [],
     "engines": [
-        "casanovo",
-        "contranovo",
-        "novob",
-        "pepnet",
-        "instanovo",
-        "spectralis",
-        "instanovoplus"
+        "casanovo"
     ],
     "filenames": [
         "LFQ_Orbitrap_DDA_Ecoli_01",
