--- a/nf_pipelines/refinement/nextflow.config
+++ b/nf_pipelines/refinement/nextflow.config
@@ -1,7 +1,7 @@
 conda.enabled = true
 
-workDir = "$HOME/Doctorate/nextflow_workdirs/nextflow_denovo_refinement"
-root = "$HOME/Doctorate"
+root = "/public/compomics3/Sam"
+workDir = "$root/nextflow_denovo_refinement"
 
 // GENERAL VARIABLES
 // ENVIRONMENT
@@ -9,36 +9,43 @@ params.conda_env_dir = "$HOME/miniconda3/envs"
 params.gpu_device = "cuda:0"
 
 // FOLDERS AND VARIABLES
-params.mgf_files = "$root/data_directory/tests/mgf_reformatted/*.mgf"
+// params.mgf_files = "/public/compomics3/Sam/PXD028735/QExactive/mgf_reformatted/*.mgf"
+params.mgf_files = "$root/test_denovo/mgf_reformatted/*.mgf"
 // params.result_files = "$root/data_directory/tests/denovo_output/casanovo/*.casanovo.mztab"
-params.denovo_results_dir = "$root/data_directory/tests/postprocessing"
+
+// OUT path
+// params.denovo_results_dir = "$root/PXD028735/QExactive/postprocessing"
+//params.denovo_results_dir = "/public/compomics3/Sam/PXD028735/QExactive/postprocessing_beams"
+params.denovo_results_dir = "$root/test_denovo/postprocessing"
 
 // INSTANOVOPLUS
-params.denovo_engine = "sage"
+// params.denovo_engine = "sage"
 
 // SPECTRALIS
-params.result_root_dir = "$root/data_directory/tests/denovo_output"
+// params.result_root_dir = "$root/data_directory/tests/denovo_output"
+// Here the to be reprocessed result files should be stored (the denovo_output folder).  INPUT
+// params.result_root_dir = "/public/compomics3/Sam/PXD028735/QExactive/denovo_output/casanovo/beams_100"
+params.result_root_dir = "/public/compomics3/Sam/test_denovo/beams/denovo_output"
 params.denovo_engines = [
-    "casanovo",
-    "instanovo",
-    "contranovo",
-    "pepnet",
-    "novob"
+    "casanovo"
 ]
 
 // ACTIVATION VARIABLES
-params.run_instanovoplus = true
+params.run_instanovoplus = false
 params.run_spectralis = true
 
 
 // INSTANOVO PLUS VARIABLES
-params.model_path_instanovo_diffusion = "$root/data_directory/denovo_project/checkpoints/instanovo/diffusion_checkpoint"
-params.instanovo_plus_run_script = "$root/DeNovo_Benchmark/package/instanovo_scripts/run_instanovoplus.py"
+// params.model_path_instanovo_diffusion = "$root/data_directory/denovo_project/checkpoints/instanovo/diffusion_checkpoint"
+// params.instanovo_plus_run_script = "$root/DeNovo_Benchmark/package/instanovo_scripts/run_instanovoplus.py"
+params.model_path_instanovo_diffusion = "/public/compomics3/Sam/denovo_checkpoints/instanovo/diffusion_checkpoint"
+params.instanovo_plus_run_script = "/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark/package_du/instanovo_scripts/run_instanovoplus.py"
 
 
 // SPECTRALIS VARIABLES
-params.config_spectralis = "$root/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
-params.spectralis_mode = "ea"
+// params.config_spectralis = "$root/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
+params.config_spectralis = "/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
+params.spectralis_mode = "rescoring"
 
 
 // RESCORING VARIABLES
@@ -50,8 +57,10 @@ params.psmlist_filetype = "parquet"
 params.rescoring_out = "/home/samva/Doctorate/data_directory/PWillems/psmlists/rescored"
 params.peak_files = "/home/samva/Doctorate/data_directory/PWillems/mzml/*.mzML"
 params.psm_lists = "/home/samva/Doctorate/data_directory/PWillems/psmlists/raw/*.parquet"
-params.raw_extension = "mzML"
+
+
+params.raw_extension = "mgf"
 
 executor {
-    queueSize = 3
+    queueSize = 1
 }
