--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "source_code/ms2rescore"]
 	path = source_code/ms2rescore
 	url = https://github.com/SamvPy/ms2rescore.git
+[submodule "source_code/NovoB"]
+	path = source_code/NovoB
+	url = https://github.com/SamvPy/NovoB.git
