change outdated instanovo repo name

--- a/nf_pipelines/refinement/modification_mapping.json
+++ b/nf_pipelines/refinement/modification_mapping.json
@@ -1,5 +1,6 @@
 {
     "M[UNIMOD:Oxidation]": "M[UNIMOD:35]",
     "[UNIMOD:Acetylation]-": "[UNIMOD:1]-",
-    "Q[UNIMOD:Gln->pyro-Glu]": "[UNIMOD:385]-"
+    "Q[UNIMOD:Gln->pyro-Glu]": "[UNIMOD:385]-",
+    "[Formula:H-2C1O1]-": "[+25.980265]-"
 }
