--- a/nf_pipelines/tools/modules/nextflow.config
+++ b/nf_pipelines/tools/modules/nextflow.config
@@ -12,12 +12,18 @@ params.conda_env_dir = "$HOME/miniconda3/envs"
  * named as the name of the tool.
  */ 
 
+// ONLY CHANGE THIS. WHERE ARE THE RESULTS STORED?
+// MUST CONTAIN SUBFOLDER: denovo_output
+
 
 // Path to model checkpoints and configurations
 // See 'Tool parameters' for specific paths
-root_checkpoints = "$HOME/Doctorate/data_directory/denovo_project/checkpoints"
-root_configs = "$HOME/Doctorate/DeNovo_Benchmark/configs"
-root_results = "$HOME/Doctorate/data_directory/tests"
+// root_checkpoints = "$HOME/Doctorate/data_directory/denovo_project/checkpoints"
+// root_configs = "$HOME/Doctorate/DeNovo_Benchmark/configs"
+// root_results = "$HOME/Doctorate/data_directory/tests"
+
+root_checkpoints = "/public/compomics3/Sam/denovo_checkpoints"
+root_configs = "/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark/configs"
 
 // root_checkpoints = "/public/compomics3/Sam/denovo_checkpoints" // Model checkpoint folder
 // root_configs = "/public/compomics3/Sam/config_files/denovo" // Model run configuration folder
@@ -27,28 +33,30 @@ root_results = "$HOME/Doctorate/data_directory/tests"
 // // TEST //
 // root_results = "/public/compomics3/Sam/test_denovo"
 
-params.maxforks_tool = 1 // How many files to parallelize for each tool
-
-// OUTPUT
-
-params.outdir_raw = "$root_results/denovo_output" // output sequencers
-params.outdir_spectralis = "$root_results/spectralis" // output rescored results
-
+params.maxforks_tool = 4 // How many files to parallelize for each tool
 
 /////////////////////
 // Tool parameters //
 /////////////////////
 
 // CASANOVO
-params.model_path_casanovo = "$root_checkpoints/casanovo/casanovo_nontryptic.ckpt"
+params.model_path_casanovo = "$root_checkpoints/casanovo/casanovo_massivekb.ckpt"
 params.config_casanovo = "$root_configs/casanovo/casanovo.yaml"
 
 // INSTANOVO
-params.model_path_instanovo_diffusion = "$root_checkpoints/instanovo/diffusion_checkpoint"
+// params.model_path_instanovo_diffusion = "$root_checkpoints/instanovo/diffusion_checkpoint"
 
-params.model_path_instanovo = "$root_checkpoints/instanovo/instanovo.pt"
-params.knapsack_instanovo = "$root_checkpoints/knapsack"
-params.config_instanovo = "$root_configs/instanovo/config.yaml"
+// params.model_path_instanovo = "$root_checkpoints/instanovo/instanovo.pt"
+// params.knapsack_instanovo = "$root_checkpoints/knapsack"
+// params.config_instanovo = "$root_configs/instanovo/config.yaml"
+
+// INSTANOVO V1
+params.model_path_instanovo_diffusion = "$root_checkpoints/instanovo_v1/instanovoplus-v1.1.0-alpha.ckpt"
+
+params.model_path_instanovo = "$root_checkpoints/instanovo_v1/instanovo-v1.1.0.ckpt"
+// params.knapsack_instanovo = "$root_checkpoints/knapsack"
+params.config_instanovo_dir = "$root_configs/instanovo_v1/dataset"
+params.config_instanovo = "$root_configs/instanovo_v1/configs"
 
 // CONTRANOVO
 params.model_path_contranovo = "$root_checkpoints/ContraNovo/ControNovo.ckpt"
