--- a/nf_pipelines/tools/nextflow.config
+++ b/nf_pipelines/tools/nextflow.config
@@ -1,30 +1,42 @@
 conda.enabled = true
 
-workDir = "$HOME/Doctorate/nextflow_workdirs/nextflow_denovo_tools"
+workDir = "/public/compomics3/Sam/nextflow_denovo_tools"
 
 // USAGE //
-// params.mgf_files = "$HOME/Doctorate/data_directory/PWillems/mzml/*.mzML"
+// params.mgf_files = "/public/compomics3/Sam/PXD028735/QExactive/mgf_reformatted/*.mgf"
 
 // TEST //
-params.mgf_files = "$HOME/Doctorate/data_directory/tests/mgf_reformatted/*.mgf"
 
+// ONLY CHANGE THE FOLLOWING TWO VARIABLES
+// OUTPUT FOLDER --> /denovo_output/*engine name*
+root_results = "/public/compomics3/Sam/PXD028735/QExactive"
+// IN MGFs
+params.mgf_files = "/public/compomics3/Sam/PXD028735/QExactive/mgf_reformatted/*.mgf"
 
-params.serializer = "$HOME/Doctorate/DeNovo_Benchmark/configs/serializer/serialize_dummy.txt"
+// PROCESSING INPUT RAW FILES
+// params.mgf_files = "/public/compomics3/Sam/Ben_Neely_Query/mgf/*.mgf"
+
+params.serializer = "/public/compomics3/Sam/config_files/denovo/serializer/serialize_dummy.txt"
 params.serialize = false
 
+
+// ACTIVATION VARIABLES
 params.run_casanovo = false
-params.run_instanovo = false
+params.run_instanovo = true
 params.run_contranovo = false
 params.run_pepnet = false
 params.run_novob = false
 params.run_smsnet = false
 params.run_pointnovo = false
 params.run_deepnovo = false
-params.run_powernovo = true
-params.run_pihelixnovo = true
-params.run_piprimenovo = true
-params.run_adanovo = true
+params.run_powernovo = false
+params.run_pihelixnovo = false
+params.run_piprimenovo = false
+params.run_adanovo = false
 
+
+params.outdir_raw = "$root_results/denovo_output" // output sequencers
+params.outdir_spectralis = "$root_results/spectralis" // output rescored results
 
 // params.tools = [
 //     'casanovo'    : true,
