--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,23 +1,22 @@
 {
     "mgf_folder": "/public/compomics3/Sam/PXD028735/QExactive/mgf_reformatted",
     "ground_truth_folder": "/public/compomics3/Sam/PXD028735/QExactive/search_results/identification",
-    "denovo_folder": "/public/compomics3/Sam/PXD028735/QExactive/denovo_output/casanovo/beams_100",
-    "postprocessing_folder": "/public/compomics3/Sam/PXD028735/QExactive/postprocessing",
-    "path_ms2rescore_config": "/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark/configs/ms2rescore/config_default.json",
+    "denovo_folder": "/public/compomics3/Sam/PXD028735/QExactive/beams_100/false",
+    "postprocessing_folder": "/public/compomics3/Sam/PXD028735/QExactive/postprocessing_beams_false",
+    "path_ms2rescore_config": "/home/sam/Work_directory/DeNovo_Benchmark/configs/ms2rescore/config_default.json",
     "ground_truth_engine": "sage",
     "regenerate": [],
     "retrain_mokapot": false,
     "output_folder": "/public/compomics3/Sam/PXD028735/QExactive/rescoring_beams",
     "file_type": "dir",
     "filename": null,
+    "batches": true,
+    "only_gt_spectra": true,
     "post_processors": [],
     "engines": [
-        "casanovo"
+        "parquet"
     ],
     "filenames": [
-        "LFQ_Orbitrap_DDA_Ecoli_01",
-        "LFQ_Orbitrap_DDA_QC_01",
-        "LFQ_Orbitrap_DDA_Human_01",
-        "LFQ_Orbitrap_DDA_Yeast_01"
+        "LFQ_Orbitrap_DDA_QC_01"
     ]
 }
