--- a/nf_pipelines/refinement/nextflow.config
+++ b/nf_pipelines/refinement/nextflow.config
@@ -6,28 +6,30 @@ workDir = "$root/nextflow_denovo_refinement"
 // GENERAL VARIABLES
 // ENVIRONMENT
 params.conda_env_dir = "$HOME/miniconda3/envs"
-params.gpu_device = "cuda:0"
+params.gpu_device = "cuda:1"
 
 // FOLDERS AND VARIABLES
-// params.mgf_files = "/public/compomics3/Sam/PXD028735/QExactive/mgf_reformatted/*.mgf"
-params.mgf_files = "$root/test_denovo/mgf_reformatted/*.mgf"
-// params.result_files = "$root/data_directory/tests/denovo_output/casanovo/*.casanovo.mztab"
+// params.mgf_files = "/public/compomics3/Sam/test_denovo/mgf_reformatted/*.mgf"
+params.mgf_files = "$root/PXD028735/QExactive/mgf_reformatted/*.mgf"
 
 // OUT path
+// params.denovo_results_dir = "/public/compomics3/Sam/test_denovo/postprocessing"
 // params.denovo_results_dir = "$root/PXD028735/QExactive/postprocessing"
 //params.denovo_results_dir = "/public/compomics3/Sam/PXD028735/QExactive/postprocessing_beams"
-params.denovo_results_dir = "$root/test_denovo/postprocessing"
+params.denovo_results_dir = "$root/PXD028735/QExactive/postprocessing"
 
 // INSTANOVOPLUS
 // params.denovo_engine = "sage"
 
-// SPECTRALIS
-// params.result_root_dir = "$root/data_directory/tests/denovo_output"
-// Here the to be reprocessed result files should be stored (the denovo_output folder).  INPUT
+// SPECTRALIS (INPUT PSMs)
+// Here the to be reprocessed result files should be stored (the denovo_output folder)
+// params.result_root_dir = "$root/test_denovo/beams/denovo_output"
 // params.result_root_dir = "/public/compomics3/Sam/PXD028735/QExactive/denovo_output/casanovo/beams_100"
-params.result_root_dir = "/public/compomics3/Sam/test_denovo/beams/denovo_output"
+params.result_root_dir = "$root/PXD028735/QExactive/denovo_output"
 params.denovo_engines = [
-    "casanovo"
+    "adanovo",
+    "pihelixnovo",
+    "piprimenovo",
 ]
 
 // ACTIVATION VARIABLES
@@ -45,18 +47,19 @@ params.instanovo_plus_run_script = "/home/sam/DeNovo/cloned_denovo_repo/DeNovo_B
 // SPECTRALIS VARIABLES
 // params.config_spectralis = "$root/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
 params.config_spectralis = "/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark/configs/spectralis/spectralis_config.yaml"
-params.spectralis_mode = "rescoring"
+params.spectralis_mode = "ea"
 
 
 // RESCORING VARIABLES
-params.casanovo_rescore_script = "/home/samva/Doctorate/DeNovo_Benchmark/scripts/infer_casanovo_scores.py"
-params.path_model_casanovo = "/home/samva/Doctorate/data_directory/denovo_project/checkpoints/casanovo/casanovo_nontryptic.ckpt"
-params.path_config_casanovo = "/home/samva/Doctorate/data_directory/PWillems/configs/casanovo.yaml"
-params.modification_mapping = "/home/samva/Doctorate/DeNovo_Benchmark/nf_pipelines/refinement/modification_mapping.json"
+root_rescoring = '/home/sam/DeNovo/cloned_denovo_repo/DeNovo_Benchmark'
+params.casanovo_rescore_script = "$root_rescoring/scripts/infer_casanovo_scores.py"
+params.path_model_casanovo = "$root/denovo_checkpoints/casanovo/casanovo_massivekb.ckpt"
+params.path_config_casanovo = "$root_rescoring/configs/casanovo/casanovo.yaml"
+params.modification_mapping = "$root_rescoring/nf_pipelines/refinement/modification_mapping.json"
 params.psmlist_filetype = "parquet"
-params.rescoring_out = "/home/samva/Doctorate/data_directory/PWillems/psmlists/rescored"
-params.peak_files = "/home/samva/Doctorate/data_directory/PWillems/mzml/*.mzML"
-params.psm_lists = "/home/samva/Doctorate/data_directory/PWillems/psmlists/raw/*.parquet"
+params.rescoring_out = "$root/PXD028735/QExactive/postprocessing/casanovo"
+params.peak_files = "$root/PXD028735/QExactive/mgf_reformatted/LFQ_Orbitrap_DDA_QC_01.mgf"
+params.psm_lists = "/public/compomics3/Sam/PXD028735/QExactive/rescoring_beams/LFQ_Orbitrap_DDA_QC_01/for_casanovo_rescoring/LFQ_Orbitrap_DDA_QC_01.parquet"
 
 
 params.raw_extension = "mgf"
