--- a/configs/casanovo/casanovo.yaml
+++ b/configs/casanovo/casanovo.yaml
@@ -20,7 +20,7 @@ predict_batch_size: 64
 # Number of beams used in beam search
 n_beams: 5
 # Number of PSMs for each spectrum
-top_match: 5
+top_match: 1
 # The hardware accelerator to use. Must be one of:
 # "cpu", "gpu", "tpu", "ipu", "hpu", "mps", or "auto"
 accelerator: "auto"
@@ -28,7 +28,7 @@ accelerator: "auto"
 # or the value -1 to indicate all available devices should be used,
 # If left empty, the appropriate number will be automatically
 # selected for automatic selected on the chosen accelerator.
-devices:
+devices: 1
 
 ###
 # The following parameters should only be modified if you are training a new
