--- a/nf_pipelines/tools/nextflow.config
+++ b/nf_pipelines/tools/nextflow.config
@@ -7,7 +7,11 @@ workDir = "/public/compomics3/Sam/nextflow_denovo_tools"
 
 // TEST //
 
-// ONLY CHANGE THE FOLLOWING TWO VARIABLES
+// Change the following three variables to the path you want:
+// - root_results: Where the results will be stored
+// - params.mgf_files: The input mgf files
+// - params.serializer: The serializer file (empty file)
+
 // OUTPUT FOLDER --> /denovo_output/*engine name*
 root_results = "/public/compomics3/Sam/test_denovo"
 // IN MGFs
@@ -21,22 +25,23 @@ params.serialize = false
 
 
 // ACTIVATION VARIABLES
-params.run_casanovo = false
+params.run_casanovo = true
 params.run_instanovo = true
-params.run_contranovo = false
-params.run_pepnet = false
-params.run_novob = false
-params.run_smsnet = false
-params.run_pointnovo = false
-params.run_deepnovo = false
-params.run_powernovo = false
-params.run_pihelixnovo = false
-params.run_piprimenovo = false
-params.run_adanovo = false
+params.run_contranovo = true
+params.run_pepnet = true
+params.run_novob = true
+params.run_smsnet = false // Not supported yet
+params.run_pointnovo = false // Not supported yet
+params.run_deepnovo = false // Not supported yet
+params.run_powernovo = false // Not supported yet
+params.run_pihelixnovo = true
+params.run_piprimenovo = true
+params.run_adanovo = true
 
 
-params.outdir_raw = "$root_results/denovo_output" // output sequencers
-params.outdir_spectralis = "$root_results/spectralis" // output rescored results
+// DO NOT CHANGE
+params.outdir_raw = "$root_results/denovo_output" // Where the results form the de novo sequencers will be stored
+params.outdir_spectralis = "$root_results/spectralis" // Where the spectralis post-processing results will be stored
 
 // params.tools = [
 //     'casanovo'    : true,
