--- a/environments/casanovo.yaml
+++ b/environments/casanovo.yaml
@@ -30,7 +30,7 @@ dependencies:
       - appdirs==1.4.4
       - async-timeout==4.0.3
       - attrs==23.2.0
-      - casanovo==0.1.dev344+g260d125
+      - casanovo==4.3.0
       - certifi==2024.6.2
       - cffi==1.16.0
       - charset-normalizer==3.3.2
